googleycalendar/src/App.css
@font-face {
  font-family: 'PierSans';
  font-weight: normal;
  src: url(./fonts/PierSans-Regular.otf) format("opentype");
}
@font-face {
  font-family: 'PierSansLight';
  font-weight: normal;
  src: url(./fonts/PierSans-Light.otf) format("opentype");
}
@font-face {
  font-family: 'PierSansBold';
  font-weight: normal;
  src: url(./fonts/PierSans-Bold.otf) format("opentype");
}
@font-face {
  font-family: 'Calibri';
  font-weight: normal;
  src: url(./fonts/Calibri-Regular.ttf) format("truetype");
}

:root {
  --font-color: #111111;
  --background: #fafafa;
  --highlight: #42424248;
  --highlight2: #8b8b8b1a;
  --highlight-tabs: #3838381f;
  --accent: #64b5f6;
  --brightnessIcon: 0;
}

body{
  background-color: var(--background);
}

::-webkit-scrollbar {
  width: 13px;
}

::-webkit-scrollbar-track {
  background:var(--background);
}

::-webkit-scrollbar-thumb {
  background: rgb(95, 95, 95); 
  border-radius: 25px;
}

::-webkit-scrollbar-thumb:hover {
  background: rgb(119, 119, 119); 
}

::-webkit-scrollbar-thumb:active{
  background:rgb(78, 78, 78); 
}

.screen{
  padding:5vw;
  height: 100vh;
}

.header1{
  font-size: 50px;
  font-family: "PierSansBold";
  color: var(--font-color);
  line-height: 1.2;
  margin-bottom: 30px;
}
.header2{
  font-size: 32px;
  font-family: "PierSans";
  color: var(--font-color);
}
.header3{
  font-size: 25px;
  font-family: "PierSans";
  color: var(--font-color);
}

.button{
  font-size: 20px;
  border-radius: 50px;
  padding-top: 13px;
  padding-bottom: 13px;
  padding-left: 25px;
  padding-right: 25px;
  font-family: 'PierSans';
  background-color: #3651ef;
  background-image: linear-gradient(to right, #36D1DC,#5B86E5, #6015a5, #6015a5);
  background-size:225%;
  text-align: center;
  color: white;
  display: inline-block;
  transition: background-position 0.5s, box-shadow 0.1s;
  box-shadow: 0 2px 8px 0 #00000066;
  cursor: pointer;
}

.button:hover{
  background-position:100%;
}

.button:active{
  transition: background-position 0.1s, box-shadow 0.07s;
  background-position:0%;
  box-shadow: 0 0.2vw 0.5vw 0 #00000000;
}

.taskTable{
  color: var(--font-color);
  overflow-x:auto;
  padding-top: 0%;
  padding-bottom: 1%;
  font-family: "Calibri";
}
table.taskList {
  width: 100%;
  min-width: 500px;
  max-width: 950px;
  border-collapse: separate;
  border-spacing: 10px;
  margin-left: -10px;
}
.taskList > tbody > tr > th{
  text-align: left;
  padding-left:10px;
  padding-right:10px;
  font-weight: normal;
  border-radius: 10px;
}
.taskList > tbody > tr > td {
  padding:10px;
  border-radius: 10px;
}
.taskList > tbody > tr{
  transition: background-color 0.5s;
}
.taskList > tbody > tr:hover{
  background-color: var(--highlight);
  transition: background-color 0.2s;
}
.taskList > tbody > tr .courseNone{
  transition: background-color 5s;
}
.taskList > tbody > tr:hover .courseNone{
  background-color: var(--background);
  opacity: 1;
  transition: background-color 0s;
}
.taskList > tbody > tr .pin:active{
  transition: 0.15s;
  background-color: var(--highlight)
}
.taskList > tbody > tr .pinNone{
  transition: background-color 5s;
}
.taskList > tbody > tr:hover .pinNone{
  background-color: var(--background);
  opacity: 1;
  transition: background-color 0s;
}
.taskList > tbody > tr th{
  background-color: var(--background);
}
.taskList > tbody > tr:hover th{
  background-color: var(--background);
}

th.check{
  width: 50px;
  min-width: 50px;
  max-width: 50px;
}
td.check{
  height: 25px;
  padding-right:5px;
  padding-left:5px;
  background-color: var(--accent);
  border-radius: 5px;
  text-align:center;
  font-size: 130%;
  cursor: pointer;
  user-select: none;
  transition: all 0.5s;
}
td.check:hover{
  box-shadow: 2px 2px 5px 1px var(--highlight);
  filter: brightness(1.1);
  transition: all 0.2s;
}
td.check:active{
  box-shadow: 2px 2px 5px 1px var(--background);
  filter: brightness(1);
  transition: all 0.1s;
}
td.task{
  font-size: 130%;
}
th.task{
  min-width: 160px;
}
th.date{
  width:19.8%;
  min-width: 110px;
}
td.date{
  font-size: 110%;
}
th.time{
  width:20%;
  min-width: 115px;
}
td.time{
  font-size: 110%;
}
th.course{
  width:12%;
}
td.course{
  font-size: 120%;
}
th.pin{
  width: 50px;
  min-width: 50px;
  max-width: 50px;
}
td.pin{
  cursor: pointer;
}
.settingsIcon{
  width: 40px;
  padding:5px;
  top:1%;
  right:1%;
  position: fixed;
  filter:invert(var(--brightnessIcon));
  transition: all 0.5s;
  cursor: pointer;
}
.settingsIcon:hover{
  transform: rotate(65deg);
}
.refreshIcon{
  width: 40px;
  padding:6px;
  top:1%;
  right: 60px;
  position: fixed;
  filter:invert(var(--brightnessIcon));
  transition: all 0.5s;
  cursor: pointer;
}
.refreshIcon:hover{
  transform: rotate(180deg);
}

.fadeIn{
  opacity:0;
  animation: fadeIn 0.8s forwards;
}
.fadeOut{
  opacity:1;
  animation: fadeOut 0.8s forwards;
}

.hoverSort{
  opacity:1;
  transition: all 0.5s;
}
.hoverSort:hover{
  opacity:0.5;
  cursor: pointer;
  transition: all 0.5s;
}
.hoverSort:active{
  opacity:0.9;
  cursor: pointer;
  transition: all 0.1s;
}
.infoIcon{
  right:0;
  top:0;
  margin: 3px;
  margin-right: 5px;
  margin-top: 5px;
  padding: 10px;
  width:40px;
  filter:invert(var(--brightnessIcon));
  opacity: 0.7;
  position: absolute;
  cursor: pointer;
  user-select: none;
}
.iconBoxWeek{
  /* The css position is in DayEntry class */
  position: absolute;
  padding-right: 3px;
  padding-bottom: 5px;
}
.infoIconWeek{
  margin: 0px;
  margin-right: 1px;
  margin-top: 0;
  padding: 0px;
  padding-left:0px;
  margin-bottom: 8px;
  width:19px;
  filter:invert(var(--brightnessIcon));
  opacity: 0.7;
  cursor: pointer;
  user-select: none;
  margin-right:6px;
}
.pinIconWeek{
  margin: 0px;
  margin-right: 1px;
  margin-top: 0;
  padding: 0px;
  padding-left:0px;
  margin-bottom: 8px;
  margin-right:8px;
  width:13px;
  filter:invert(var(--brightnessIcon));
  opacity: 0.7;
  cursor: pointer;
  user-select: none;
  transition: all 0.3s;
}
/* ... */

